--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ body {
   
 }
 .calculator-grid > button {
+  color: black;
   cursor: pointer;
   font-size: 2rem;
   outline: none;
@@ -154,15 +155,13 @@ body {
   }
 }
 .button-grid {
- 
+  color: black;
   box-sizing: border-box;
   display: grid;
   justify-content: center;
   align-content: center;
   grid-template-columns: repeat(4, 100px);
   grid-auto-rows: 100px;
-
-
 }
 .button-grid > button {
   cursor: pointer;
