--- a/style.css
+++ b/style.css
@@ -19,21 +19,19 @@ body {
 
   display: flex;
   justify-content: center;
-  flex-wrap: wrap;
-  gap: 50px;
   align-items: flex-end;
 }
 
 .calculator-grid {
   box-sizing: border-box;
   display: grid;
-  justify-content: center;
+  justify-content: flex-end;
   align-content: center;
-
-  grid-template-columns: repeat(4, 100px);
-  grid-template-rows: minmax(120px, auto) repeat(5, 100px);
-  
-  
+  width: calc(50% - 25px);
+  padding-right: 25px;
+  height: 100vh;
+  grid-template-columns: repeat(4, minmax(auto, 100px));
+  grid-template-rows: minmax(120px, auto) repeat(5, minmax(auto, 100px));
 }
 .calculator-grid > button {
   color: black;
@@ -81,87 +79,29 @@ body {
   color: var(--white);
   font-size: 2.5rem;
 }
-   
-/*#advanced-toggle {
-  display: none
-}
-.advanced-toggle-wrapper {
-  box-sizing: border-box;
-  width: 400px;
-  height: 50px;
-  background-color: rgb(47, 47, 47);
-  cursor: pointer;
-
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  border: 1px solid var(--white);
-  transition: 0.3s;
- 
-}
-
-.advanced-button,
-.advanced-button::before,
-.advanced-button::after {
-  display: block;
-  background-color: var(--primaryColor);
-  position: absolute;
-  height: 6px;
-  width: 50px;
-  transition: transform 400ms cubic-bezier(0.23, 1, 0.32, 1);
-  border-radius: 2px;
-}
-#advanced-toggle:checked + .advanced-toggle-container .advanced-button::before {
-  margin-top: 0px;
-  transform: rotate(405deg);
-}
-
-#advanced-toggle:checked + .advanced-toggle-container .advanced-button {
-  background: transparent;
-}
-
-#advanced-toggle:checked + .advanced-toggle-container .advanced-button::after {
-  margin-top: 0px;
-  transform: rotate(-405deg);
-}
-
-.advanced-button::before {
-  content: '';
-  margin-top: -12px;
-}
-.advanced-button::after {
-  content: '';
-  margin-top: 12px;
-}
-
-#advanced-toggle:checked ~ .advanced-toggle-wrapper {
-  width: 100px;
-  height: 100px;
-  background-color: rgb(47, 47, 47);
-  margin-right: 300px;
-}
-#advanced-toggle:checked ~ .button-grid {
-  display: none;
-}
-.advanced-buttons-container {
-  min-width: 400px;
-}*/
-
-@media (max-width: 850px) {
+@media (orientation: portrait) {
   .button-grid {
-    grid-template-columns: repeat(1, 100px) !important;
     display: none !important;
+  
   }
+  .calculator-grid {
+    justify-content: center;
+    width: 100%;
+    padding: 0;
+  }
+
 }
 .button-grid {
   color: black;
   box-sizing: border-box;
   display: grid;
-  justify-content: center;
+  justify-content: flex-start;
   align-content: center;
-  grid-template-columns: repeat(4, 100px);
-  grid-auto-rows: 100px;
+  width: calc(50% - 25px);
+  padding-left: 25px;
+  height: 100vh;
+  grid-template-columns: repeat(4, minmax(auto, 100px));
+  grid-auto-rows: minmax(auto, 100px);
 }
 .button-grid > button {
   cursor: pointer;
