--- a/style.css
+++ b/style.css
@@ -59,6 +59,7 @@ body {
 }
 .calculator-grid .function {
   background-color: var(--highlightFc);
+  color: var(--white);
 }
 
 
@@ -112,7 +113,7 @@ body {
   grid-auto-rows: minmax(auto, 100px);
 }
 .button-grid > button {
-  color: black;
+  color: var(--white);
   cursor: pointer;
   font-size: var(--fontSizeDisplay);
   outline: none;
